# gliner-api

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.gpu  README.md  SECURITY.md  compose.yaml  config.yaml  cpu.Dockerfile  gpu.Dockerfile  logconf.yaml  main.py  pyproject.toml  renovate.json5  repo-og-image.xcf
.github/workflows/: docker-release.yml  ruff.yml  scorecard.yml
example_configs/: config.yaml  general.yaml  general_onnx.yaml  general_onnx_quantized.yaml  medical.yaml  pii.yaml
gliner_api/: backend.py  config.py  datamodel.py  frontend.py  helpers.py  logging.py  metrics.py  settings.py  version.py
