[project]
name = "gliner-api"
version = "0.1.0"
description = "A minimal FastAPI app serving GLiNER models"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["fastapi[standard]>=0.115.12", "uvicorn[standard]>=0.34.2"]

[project.optional-dependencies]
cpu = ["torch>=2.7.0", "gliner>=0.2.20"]
gpu = ["torch>=2.7.0", "gliner[gpu]>=0.2.20"]

[tool.uv]
conflicts = [[{ extra = "cpu" }, { extra = "gpu" }]]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu128", extra = "gpu" },
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
