[project]
name = "gliner-api"
version = "0.1.0"
description = "A minimal FastAPI app serving GLiNER models"
readme = "README.md"
requires-python = "==3.12.11"
dependencies = [
    "fastapi[standard]==0.115.14",
    "gitpython==3.1.44",
    "huggingface-hub==0.33.1",
    "prometheus-client>=0.22.1",
    "pydantic-settings==2.10.1",
    "uvicorn[standard]==0.35.0",
]

[project.optional-dependencies]
cpu = ["torch==2.7.1", "gliner[tokenizers]==0.2.21"]
gpu = ["torch==2.7.1", "gliner[gpu,tokenizers]==0.2.21"]

[tool.uv]
conflicts = [[{ extra = "cpu" }, { extra = "gpu" }]]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu128", extra = "gpu" },
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[dependency-groups]
dev = ["ipykernel==6.29.5", "pre-commit==4.2.0", "ruff==0.12.1", "ty==0.0.1a12"]
